--- a/yolo_config/dataset_night_hsvt.yaml
+++ b/yolo_config/dataset_night_hsvt.yaml
@@ -86,12 +86,12 @@ names: # Tuned to match coco (model trained with coco originally)
 path: /home/arvc/eeha/kaist-yolo-annotated/
 test:
 train: 
-  - train-night-02/visible/
-  - train-night-04/visible/
-  - train-night-20/visible/
+  - train-night-02/hsvt/
+  - train-night-04/hsvt/
+  - train-night-20/hsvt/
 val: 
-  - test-night-01/visible/
-  - test-night-20/visible/
+  - test-night-01/hsvt/
+  - test-night-20/hsvt/
 
 
 
