--- a/yolo_config/yoloCh4_late_split_v1.yaml
+++ b/yolo_config/yoloCh4_late_split_v1.yaml
@@ -8,7 +8,7 @@
 
 # Parameters
 nc: 80  # number of classes
-ch: 4
+ch: 3
 
 scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call yolov8.yaml with scale 'n'
   # [depth, width, max_channels]
@@ -37,7 +37,7 @@ backbone:
   - [-1, 1, SPPF, [1024, 5]]  # 11
 
   # Thermal backbone layers
-  - [ 0, 1, FilterInput, [3] ]  # 12-P1/2        # Keeps configured channels discarding the rest
+  - [ 0, 1, FilterInput, [1] ]  # 12-P1/2        # Keeps configured channels discarding the rest
   - [-1, 1, Conv, [64, 3, 2]]  # 13-P1/2
   - [-1, 1, Conv, [128, 3, 2]]  # 14-P2/4
   - [-1, 3, C2f, [128, True]]
@@ -59,40 +59,46 @@ head:
 
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
   - [[-1, 6], 1, Concat, [1]]  # cat backbone P3
-  - [-1, 3, C2f, [256]]  # 28 (P3/8-small)
+  - [-1, 3, C2f, [256]]  # 28 -> not anymore (P3/8-small)
+  - [[-1,0], 1, FilterInputDetach, [0,1,2]] # 29  (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 25], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 31 (P4/16-medium)
+  - [-1, 3, C2f, [512]]  # 32 -> not anymore! (P4/16-medium)
+  - [[-1,0], 1, FilterInputDetach, [0,1,2]] # 33  (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 11], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 34 (P5/32-large)
+  - [-1, 3, C2f, [1024]]  # 36 -> not anymore  (P5/32-large)
+  - [[-1,0], 1, FilterInputDetach, [0,1,2]] # 37  (P5/32-large)
 
 
   # Thermal head layers
   - [22, 1, nn.Upsample, [None, 2, 'nearest']]
   - [[-1, 19], 1, Concat, [1]]  # cat backbone P4
-  - [-1, 3, C2f, [512]]  # 37
+  - [-1, 3, C2f, [512]]  # 40
 
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
   - [[-1, 17], 1, Concat, [1]]  # cat backbone P3
-  - [-1, 3, C2f, [256]]  # 40 (P3/8-small)
+  - [-1, 3, C2f, [256]]  # 43 -> not anymore  (P3/8-small)
+  - [[-1,0], 1, FilterInputDetach, [1]] # 44 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 37], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 43 (P4/16-medium)
+  - [[-1, 40], 1, Concat, [1]]  # cat head P4
+  - [-1, 3, C2f, [512]]  # 47 -> not anymore  (P4/16-medium)
+  - [[-1,0], 1, FilterInputDetach, [1]] # 48 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 22], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 46 (P5/32-large)
+  - [-1, 3, C2f, [1024]]  # 51 -> not anymore  (P5/32-large)
+  - [[-1,0], 1, FilterInputDetach, [1]] # 52 (P5/32-large)
 
 
-  - [ [ 28, 40 ], 1, Concat, [ 1 ] ]  # cat both (visible+thermal) head P3  47
-  - [ [ 31, 43 ], 1, Concat, [ 1 ] ]  # cat both (visible+thermal) head P4  48
-  - [ [ 34, 46 ], 1, Concat, [ 1 ] ]  # cat both (visible+thermal) head P5  49
+  - [ [ 29, 44 ], 1, Concat, [ 1 ] ]  # cat both (visible+thermal) head P3  53
+  - [ [ 33, 48 ], 1, Concat, [ 1 ] ]  # cat both (visible+thermal) head P4  54
+  - [ [ 37, 52 ], 1, Concat, [ 1 ] ]  # cat both (visible+thermal) head P5  55
 
-  - [[47, 48, 49], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[53, 54, 55], 1, Detect, [nc]] # Detect(P3, P4, P5)
 
 # From https://github.com/ultralytics/ultralytics/issues/3194#issuecomment-1596150935:
 # The line you mentioned - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2 in the model.yaml file represents one layer in the backbone configuration. Let's break it down:
@@ -105,12 +111,12 @@ subgraph_config:
   Backbone_Thermal: [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
   Head_Visible:
     HV: [23, 24, 25]
-    Head_Visible_1: [26, 27, 28]
-    Head_Visible_2: [29, 30, 31]
-    Head_Visible_3: [32, 33, 34]
+    Head_Visible_1: [26, 27, 28, 29]
+    Head_Visible_2: [30, 31, 32, 33]
+    Head_Visible_3: [34, 35, 36, 37]
   Head_Thermal:
-    HT: [35, 36, 37]
-    Head_Thermal_1: [38, 39, 40]
-    Head_Thermal_2: [41, 42, 43]
-    Head_Thermal_3: [44, 45, 46]
-  Detection: [47, 48, 49, 50, 51]
+    HT: [38, 39, 40]
+    Head_Thermal_1: [41, 42, 43, 44]
+    Head_Thermal_2: [45, 46, 47, 48]
+    Head_Thermal_3: [49, 50, 51, 52]
+  Detection: [53, 54, 55]  # Detect(P3, P4, P5)
