--- a/yolo_config/yoloCh1.yaml
+++ b/yolo_config/yoloCh1.yaml
@@ -55,3 +55,13 @@ head:
 # The line you mentioned - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2 in the model.yaml file represents one layer in the backbone configuration. Let's break it down:
 #   ·  [-1, 1, Conv, [64, 3, 2]]: This part describes the layer itself. It starts with a negative value -1, which means that this layer takes its input from the previous layer. The 1 means that it is the first layer in the backbone. Conv indicates that it is a convolutional layer, and [64, 3, 2] specifies the configuration of this layer (specifically, it has 64 filters, a kernel size of 3x3, and a stride of 2).
 #   ·  # 0-P1/2: This comment provides additional information about this layer. The 0 indicates that this layer's output index is 0, and P1/2 suggests that the output is passed to the first detection layer which has a stride of 2.
+
+# EEHA - Just for plotting graph
+subgraph_config:
+  Backbone: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+  Head:
+    HV: [10, 11, 12]
+    Head_1: [13,14,15]
+    Head_2: [16,17,18]
+    Head_3: [19,20,21]
+  Detection: [22]
